Correcion de Bug